Fix box shadow on iOS devices and fix a bug where the group triggering did not work on mobile devices

--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -37,6 +37,8 @@
   font-size: 20px;
   color: black;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.45);
+  -webkit-appearance: none;
+  appearance: none;
   border: 0;
   border-radius: 3px;
   padding: 0 8px;
@@ -61,20 +63,16 @@
   justify-content: space-between;
 }
 
-.group label {
-  padding-right: 4px;
+.group div {
+  margin-right: 10px;
 }
 
-.group label:last-child {
-  padding-right: 0px;
+.group div:last-child {
+  margin-right: 0px;
 }
 
-.group input[type="checkbox"]:checked + label {
+.group div.active {
   color: black;
-}
-
-.group input[type="checkbox"] {
-  display: none;
 }
 
 .topbar .searchArea {
@@ -121,6 +119,10 @@
   .group {
     margin-left: 4px;
   }
+
+  .group div {
+    margin-right: 4px;
+  }
 }
 
 .searchbarButton {
@@ -129,7 +131,7 @@
   border: 0;
   position: absolute;
   right: 0;
-  top: 7px;
+  top: 6px;
 }
 
 .searchArea .searchResults {
